[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GridSystem.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ShipEditor.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=4]

[node name="ShipEditor" type="Node"]
script = ExtResource( 3 )

[node name="GridSystem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="RigidBody" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="AddButton" type="Button" parent="Control"]
margin_left = 74.0
margin_top = 525.0
margin_right = 137.0
margin_bottom = 594.0
text = "ADD"

[node name="RemoveButton" type="Button" parent="Control"]
margin_left = 5.0
margin_top = 525.0
margin_right = 68.0
margin_bottom = 594.0
text = "REMOVE"

[node name="TestButton" type="Button" parent="Control"]
margin_left = 900.0
margin_top = 5.0
margin_right = 1020.0
margin_bottom = 118.0
text = "TEST LEVEL"

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.05724 )
